[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Guns/Weap-Pick-23-Bomb-Man.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Explosions/Ex-02-Standard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Projectiles/Smoke_Blank.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Guns/Weap-23-Bomb-fuse.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Guns/Weap-23-Bomb.png" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.05

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 4.4
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Fuse:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45, 3.6, 3.75, 3.9, 4.05, 4.2, 4.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=5]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, -10, 8.66025, 5, -8.66025, 5 )

[node name="Weap-Pick-23-Bomb-Man" type="RigidBody2D" groups=[
"PickUp",
"hittable",
]]
collision_layer = 524288
collision_mask = 917534
mass = 0.4
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
continuous_cd = 2
contacts_reported = 9
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )
boom = ExtResource( 2 )
smoke = ExtResource( 3 )

[node name="Sprite_Fuse" type="Sprite" parent="."]
position = Vector2( 0.711975, -23.3074 )
texture = ExtResource( 4 )
vframes = 8
hframes = 4

[node name="Sprite_Body" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Timer_Boom" type="Timer" parent="."]
wait_time = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Armed = SubResource( 2 )
anims/Unarmed = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Lit = SubResource( 4 )
anims/Unlit = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0296669, 1.9796 )
shape = SubResource( 6 )

[node name="Timer_start" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="body_exited" from="." to="." method="_on_WeapPick20Grenade_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Boom" to="." method="_on_Timer_Boom_timeout"]
[connection signal="timeout" from="Timer_start" to="." method="_on_Timer_start_timeout"]
